11월 2주차 시작

--- a/2023/11월/06~10.md
+++ b/2023/11월/06~10.md
@@ -6,3 +6,10 @@
 ## 3 . 지난 주 테스트 코드 관련 설계 변경 으로 인한 Mock 라이브러리 제거 및 수정 
 
 
+- 마이그레이션 하는 과정중 덜렁 거리는 실수를 함
+- 다 한줄알았는데, 기존 어드민 아이디를 user 테이블로 옴겼어야했고,
+- 암호화 방식도 바꼇으니 그에 따른 암호도 붙여넣으면서 type도 admin으로 했어야 됬다.
+- 마지막으로 admin계정에 Role을 연결했어야 됬는데 그걸 또 빼먹음.
+- 흠. 다음에도 이런상황이 왔을때 DML을 작성해서 하는게 더나을까.
+- 아니면 좀더 침착하게 잘 봐야겠다. 작은 규모라지만 실수는 용납안돼지.
+
