11월 2주차 푸쉬

--- a/2023/11월/06~10.md
+++ b/2023/11월/06~10.md
@@ -1,10 +1,10 @@
-
-
 # 11.06
-## 1 . role , permission 관련 데이터 마이그레이션 
-## 2 . 현재 Admin List 반환값들 Page 형식으로 변환
-## 3 . 지난 주 테스트 코드 관련 설계 변경 으로 인한 Mock 라이브러리 제거 및 수정 
 
+## 1 . role , permission 관련 데이터 마이그레이션
+
+## 2 . 현재 Admin List 반환값들 Page 형식으로 변환
+
+## 3 . 지난 주 테스트 코드 관련 설계 변경 으로 인한 Mock 라이브러리 제거 및 수정
 
 - 마이그레이션 하는 과정중 덜렁 거리는 실수를 함
 - 다 한줄알았는데, 기존 어드민 아이디를 user 테이블로 옴겼어야했고,
@@ -12,4 +12,13 @@
 - 마지막으로 admin계정에 Role을 연결했어야 됬는데 그걸 또 빼먹음.
 - 흠. 다음에도 이런상황이 왔을때 DML을 작성해서 하는게 더나을까.
 - 아니면 좀더 침착하게 잘 봐야겠다. 작은 규모라지만 실수는 용납안돼지.
+
+# 11.07 ~ 11.10
+
+- jsoup를 이용한 웹 크롤러를 만들고
+- 해당 크롤러로 검색 api 개발 진행중
+- 기획이 애매한 부분이있어서 stop된 부분이 많아 시간이 좀 걸렸다.
+- 처음에는 bfs를 이용해 모든페이지를 순회해서 웹사이트 모든 경로를 얻었으나
+- sitemap.xml이 업데이트 되면서 좀더 쉽게 페이지들을 수집 가능 했다.
+
 
