4주차 시작 레빗엠큐 자료 추가 커밋

--- a/2023/11월/27~01.md
+++ b/2023/11월/27~01.md
@@ -126,3 +126,13 @@
 4. 큐 선언 및 메시지 전송: channel.queueDeclare를 호출하여 지정된 이름의 큐가 없으면 새로 생성합니다. channel.basicPublish를 사용하여 "Hello World!" 메시지를 해당 큐에 전송합니다.
 
 ![img_5.png](img_5.png)
+
+
+
+## 문의글 save후 메일전송 개발
+
+- 위에 레빗엠큐를 잠시보면서 메세지서버를보니 리펙토링을 해야겠다는 생각을했따
+- 그런데 문제는 레빗엠큐는 큐를 하나만 사용하는게 좋을꺼 아니면 어느정도까지 갯수를 사용하는게 좋을까
+- 명확한 기준이 나와있지않고 프로젝트 상황에 따라 다르다는데 체감이 잘안돼서 많이힘들었다.
+- 현재 메세지 서버를 리펙토링하기엔 설계 준비된게없어서 잠시 미루고.
+- 어플리케이션 이벤트를 발생시켜 일단 메세지서버에 메일 전달되는 부분에 규격에 맞춰 데이터를 보내주고 메시지 전송 시스템을 완성햇다.
