4주차 시작 레빗엠큐 자료 추가 커밋

--- a/2023/11월/20~24.md
+++ b/2023/11월/20~24.md
@@ -64,3 +64,35 @@ public Map<String, Future<Document>> fetchDocuments(List<String> urls) {
 - 그래서 함수를 실행시 매번 새로 생기게 하니 문제없이 크롤링이 됬다.
 - 적다 보니 참 횡설 수설 ㅠㅠ
 
+
+## 영속성 컨텍스트
+
+- 오랜만에 기본 개념이나왔는데 잊어버리고 한 실수
+  
+      @Tranjactional
+        public void migrationMailTemplateById(final Long id) {
+    
+        String profile = config.getProfile();
+    
+        checkProfile(profile);
+    
+        MailTemplate mailTemplate = repository.findById(id)
+            .orElseThrow(() -> new NotFoundException(NOT_FOUND_TEMPLATE_BY_ID + id));
+    
+        setDataSourceKeyByProfile(config.getProfile());
+    
+        repository.save(mailTemplate.copy());
+    
+        clearDataSourceKey();
+      }
+
+- 마이그레이션 로직 중간에 데이터소스를 바꿔줘 저장하는대
+- 처음 트랜잭션을 붙여서 했더니 원래 바라보던 개발 디비로 계속저장이 됬다.
+- 이유를 계속 생각하고 알아본결과
+- 처음 dev디비에서 가져온 영속성객체는 dev디비의 영속성객체이기 때문에.
+- 중간에 test디비로 변경을해도 dev디비에 영속성 객체이기때문에 test디비에 저장이 되지 않는 것이다.
+- 트랜잭션 어노테이션 안에서 동작원리도 생각해보면
+- 어노테이션을 붙이면 해당 dev 디비로 커넥션을하고 오토커밋을 안한상태로 시작하기 때문에
+- 이런이유로 중간에 디비 방향을 바꿔도 기존 dev디비로 연결되있으니 dev디비에 저장되는 거 같다.
+- 그래서 @Tranjactional어노테이션을 안붙이면 아이디를 조회해서 가져와도 비영속성 객체가 되고 오토커밋 true? 상태 이건 관계없는거같기도..
+- 어디 지속되는 객체가 아니기때문에 중간에 테스트 디비로 방향을 바꿔도 테스트 디비에 저장이 된다.
